--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <li>Email address: *********@gmail.com</li>
         </ul>
         <hr>
-        <form class="" action="mailto:hanmn2000@gmail.com" method="post" enctype="text/plain">
+        <form class="" action="mailto:*********@gmail.com" method="post" enctype="text/plain">
             <label>Your name:</label>
             <input type="text" name="yourName" value="">
             <br>
